--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-boto3==1.3.1
-coverage==4.1
-elasticsearch==2.3.0
-envs==0.1.2
-nose==1.3.7
-redis==2.10.5
+boto3>=1.3.1
+coverage>=4.1
+envs>=0.1.2
+nose>=1.3.7
+redis>=2.10.5
 
