Ability to filter documents using wildcards
PEP8 fixes

Fixing tests

Enable TravisCI Redis service and set env vars

Env Vars should be global

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: nosetests
+services:
+  - redis-server
+env:
+  global: 
+    - REDIS_HOST_TEST=localhost
+    - REDIS_PORT_TEST=6379
